# Hermes-A365

./: .gitignore  CHANGELOG.md  README.md  SKILL.md  SPEC.md  a365.config.json.example  pyproject.toml
.github/workflows/: publish-requirements.txt  publish.yml  test.yml
docs/submissions/: microsoft-agent365-devtools-issue.md
plugins/agent365/: README.md  adapter.py
references/: README.md  a365-cli-reference.md  activity-protocol-shapes.md  entra-blueprint-properties.md  error-codes.md  exposing-the-bot-endpoint.md  license-cost-table.md  live-tenant-test.md  m365-surface-coverage.md  manifest-schema-currency.md  opentelemetry-config.md  walk-v0.7.5.md  webhook-contract.md
scripts/: _common.py  activity_bridge.py  cleanup.py  consent.py  deploy.py  doctor.py  emit_card.py  fic_rotate.py  instance_create.py  keychain.py  license.py  mutator.py  publish.py  reconcile_app.py  reconcile_blueprint.py  register.py  render_blueprint.py  render_instance_env.py  status.py  workiq.py
src/hermes_a365/: __init__.py  _common.py  activity_bridge.py  bot_service.py  cleanup.py  cli.py  consent.py  doctor.py  emit_card.py  hermes_responder.py  instance_create.py  invoke.py  keychain.py  license.py  mutator.py  publish.py  reconcile_app.py  reconcile_blueprint.py  register.py  render_instance_env.py  status.py
src/hermes_a365/_data/templates/: blueprint.json.j2
src/hermes_a365/_data/templates/adaptive-cards/: confirmation.json.j2  error.json.j2  greeting.json.j2
src/hermes_a365/plugin/: README.md  __init__.py  adapter.py  cli.py  conversations.py
templates/: consent-url.txt.j2  instance.env.j2
tests/: conftest.py  test_a365_config.py  test_activity_bridge.py  test_agent365_plugin.py  test_bot_service.py  test_cleanup.py  test_common.py  test_consent.py  test_deploy.py  test_doctor.py  test_emit_card.py  test_fic_rotate.py  test_hermes_responder.py  test_instance_create.py  test_invoke.py  test_keychain.py  test_license.py  test_mutator.py  test_publish.py  test_reconcile_app.py  test_reconcile_blueprint.py  test_register.py  test_render_blueprint.py  test_render_instance_env.py  test_status.py  test_workiq.py
tests/golden/adaptive-cards/: confirmation_action_only.json  confirmation_with_facts.json  error_minimal.json  error_with_detail.json  greeting_minimal.json  greeting_with_commands.json
tests/golden/blueprint/: minimal.json  with_workiq.json
tests/golden/instance_env/: minimal.env  with_business_hours.env
tests/golden/license/: addon_small_team.txt  e7_large_team.txt
