[project]
name = "hermes-a365"
version = "0.1.0"
description = "Integrate Hermes agents into the Microsoft 365 ecosystem using Microsoft Agent 365 (A365)."
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Sadiq Jaffer", email = "sadiq.jaffer@satscryption.io"},
]
requires-python = ">=3.11"
dependencies = [
  "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/satscryption/Hermes-A365"
Issues = "https://github.com/satscryption/Hermes-A365/issues"
Documentation = "https://github.com/satscryption/Hermes-A365#readme"

[project.optional-dependencies]
# Slice 19b — `activity_bridge.py serve` mode pulls in a small webserver
# stack. Optional so operators who only run setup/cleanup wrappers can
# install with no extras.
bridge = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "pyjwt[crypto]>=2.8",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.5",
  # Bridge stack is installed in dev too so tests can exercise it.
  "fastapi>=0.115",
  "httpx>=0.27",
  "pyjwt[crypto]>=2.8",
  "uvicorn>=0.30",
]

[tool.uv]
# This skill is loaded from source by the Hermes harness; we don't build a wheel.
# Mark the project as virtual so uv installs deps without trying to package it.
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts are fine in tests

[tool.pytest.ini_options]
pythonpath = ["scripts"]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"
